--- a/1-node-book-list(project)/templates/template-overview.html
+++ b/1-node-book-list(project)/templates/template-overview.html
@@ -76,45 +76,7 @@
     <h1>Book List</h1>
 
     <div class="card-container">
-        <figure>
-            <figcaption>
-                <div class="book-name">Looking for Alaska</div>
-                <div class="author-name">John Green</div>
-                <a href="#">Details</a>
-            </figcaption>
-        </figure>
-
-        <figure>
-            <figcaption>
-                <div class="book-name">Animal Farm</div>
-                <div class="author-name">George Orwell</div>
-                <a href="#">Details</a>
-            </figcaption>
-        </figure>
-
-        <figure>
-            <figcaption>
-                <div class="book-name">The Great Gatsby</div>
-                <div class="author-name">F. Scott Fitzgerald</div>
-                <a href="#">Details</a>
-            </figcaption>
-        </figure>
-
-        <figure>
-            <figcaption>
-                <div class="book-name">The Catcher in the Rye</div>
-                <div class="author-name">J.D. Salinger</div>
-                <a href="#">Details</a>
-            </figcaption>
-        </figure>
-
-        <figure>
-            <figcaption>
-                <div class="book-name">Never Let Me Go</div>
-                <div class="author-name">Kazuo Ishiguro</div>
-                <a href="#">Details</a>
-            </figcaption>
-        </figure>
+        {%BOOK_CARDS%}
     </div>
 
 </body>
