--- a/1-node-book-list(project)/templates/template-card.html
+++ b/1-node-book-list(project)/templates/template-card.html
@@ -2,6 +2,6 @@
     <figcaption>
         <div class="book-name">{%BOOK_NAME%}</div>
         <div class="author-name">{%AUTHOR_NAME%}</div>
-        <a href="#">Details</a>
+        <a href="/product?id={%ID%}">Details</a>
     </figcaption>
 </figure>
