--- a/1-node-book-list(project)/templates/template-book.html
+++ b/1-node-book-list(project)/templates/template-book.html
@@ -81,7 +81,7 @@
         </div>
         <div class="field">
             <label for="genre" class="text-gray">Genre:</label>
-            <p id="genre">{%%GENRE}</p>
+            <p id="genre">{%GENRE%}</p>
         </div>
         <div class="field">
             <label for="publicationDate" class="text-gray">Publication Date:</label>
